--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,19 +17,13 @@ concurrency:
 jobs:
   macOS:
     if: github.event_name != 'pull_request' || !contains(github.event.pull_request.title, '[skip ci]')
-    name: ${{ matrix.platform }} (Swift ${{ matrix.swift }})
+    name: macOS (Swift ${{ matrix.swift }})
     runs-on: macos-15
     strategy:
       fail-fast: false
       matrix:
-        platform:
-          - iOS
-          - mac-catalyst
-          - macOS
-          - tvOS
-          - visionOS
-          - watchOS
         swift:
+          - "5.10"
           - "6.0"
           - "6.1"
           - "6.2"
@@ -53,18 +47,10 @@ jobs:
           rm -rf ~/Library/Developer/Xcode/SourcePackages
           rm -rf ~/Library/Caches/org.swift.swiftpm
 
-      - if: matrix.platform != 'mac-catalyst' && matrix.platform != 'macOS'
-        name: Download Required Runtime
-        run: xcodebuild -downloadPlatform ${{ matrix.platform }}
-
-      - if: matrix.platform != 'mac-catalyst' && matrix.platform != 'macOS'
-        name: List Available Simulators
-        run: xcrun simctl list devices
-
       - name: Run Tests
         uses: mxcl/xcodebuild@v3
         with:
-          platform: ${{ matrix.platform }}
+          platform: macOS
           swift: ~${{ matrix.swift }}
           action: test
           verbosity: xcbeautify
